syntax = "proto3";

package order;

option go_package = "github.com/mephirious/advanced-programming-2/order-service/pkg/api/order;order";

import "google/protobuf/timestamp.proto";

// Enums
enum OrderStatus {
  PENDING = 0;
  COMPLETED = 1;
  CANCELLED = 2;
}

// Messages
message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total = 4;
  OrderStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateOrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated CreateOrderItem items = 2;
}

message OrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message GetId {
  string id = 1;
}

message GetStatus {
  string status = 1;
}

message ListOrdersRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

// Service
service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrderByID(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc ListUserOrders(ListOrdersRequest) returns (ListOrdersResponse);
}
